# idsprites

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_publish.yml  format_and_test.yml  publish.yml  workflow.yml
examples/: infinite_analogies.ipynb  infinite_dsprites.ipynb
idsprites/: __init__.py  continual_benchmark.py  dataset.py  infinite_dsprites.py  visualization.py
scripts/: generate_dataset.py
tests/: test_infinite_dsprites.py
