[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idsprites"
version = "0.1.0"
authors = [
    {name = "Sebastian Dziadzio", email = "dziadzio@hey.com"},
]
description = "Easily generate simple continual learning benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python",
    "scipy",
    "scikit-learn",
]

[tool.hatch.build]
include = ["idsprites"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B905"] # disable zip-without-explicit-strict
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # disable unused-import in __init__.py files