[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idsprites"
version = "1.0.1"
authors = [
    {name = "Sebastian Dziadzio", email = "dziadzio@hey.com"},
]
description = "Easily generate simple continual learning benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.13.0",
    "matplotlib>=3.8.2",
    "numba>=0.58.1",
    "numpy>=1.26.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.8.1",
    "scipy>=1.11.4",
    "scikit-learn>=1.3.2",
    "torch>=2.1.2",
    "tqdm>=4.66.1",
]

[tool.hatch.build]
include = ["idsprites"]

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B905"] # disable zip-without-explicit-strict
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # disable unused-import in __init__.py files